--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@babel/core": "7.12.3",
     "@babel/plugin-proposal-decorators": "^7.12.1",
     "@loadable/component": "^5.14.1",
