--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "suppressImplicitAnyIndexErrors": true,
     "jsx": "react"
   },
   "include": [
